--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,16 @@
       <scope>test</scope>
     </dependency>
 
-
     <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
       <version>20210307</version> //Check for the latest version
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.15.0</version> // check for the latest version
     </dependency>
 
   </dependencies>
