[Yagyata] ADD: Convert CSV data into JSON

--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,11 @@
       <version>2.15.0</version> // check for the latest version
     </dependency>
 
+    <dependency>
+      <groupId>com.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
+      <version>5.8</version>
+    </dependency>
+
   </dependencies>
 </project>
